--- a/vi-hart-notebook-number-grid/styling.css
+++ b/vi-hart-notebook-number-grid/styling.css
@@ -3,26 +3,37 @@ html, body {
 }
 
 .container {
-    width: 50%;
+    width: 75%;
     height: 75%;
     margin: 100px auto 0;
-    background-color: lightblue;
     padding: 0;
+    text-align: center;
 }
 
 table {
     border-collapse: collapse;
+    border: 2px solid #0d0d0d !important; /* basically black lol */
     width: 0 !important;
     margin: auto !important;
+    background-color: #f4f9fb !important; /* off white */
 }
 
-table td {
-    border: 1px solid gray !important;
-    width: 5px;
-    height: 5px;
+td, tr {
+    border-left: none !important;
+    border-right: none !important;
+    border-top: 1px solid #ccd5e6 !important; /* notebook lines */
+    border-bottom: 1px solid #ccd5e6 !important; /* notebook lines */
+    width: 5px !important;
+    height: 5px !important;
     text-align: center;
     vertical-align: middle;
     font-size: 5pt;
-    padding: 0;
+    padding: 0.3rem !important;
     text-overflow: clip;
+}
+
+.grayFilled {
+    background-color: #7c7d89 !important;
+    border-top: 1px solid #7c7d89 !important;
+    border-bottom: 1px solid #7c7d89 !important;
 }
